# rapid-tmx

./: .gitignore  CMakeLists.txt  TmxMap.cpp  TmxMap.h  conanfile.py  conanfile.txt  configure.cmd  meson.build  rapid-tmx-config.cmake  rapid-tmxConfig.cmake  rapid-xmlConfig.cmake
include/: meson.build
src/: TmxMap.cpp  meson.build
tests/: CMakeLists.txt  map_test.cpp  meson.build
